# plasma-gnome-screenshot-bridge

./: README.md  pyproject.toml
contrib/: plasma-gnome-screenshot-bridge.service
