[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plasma-gnome-screenshot-bridge"
version = "1.1.0"
description = "DBus bridge implementing GNOME Screenshot interface for KDE Plasma and other Wayland compositors"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Community Contributors"}
]
keywords = [
    "wayland", "kde", "plasma", "gnome", "screenshot", "dbus",
    "upwork", "time-tracker", "bridge"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment :: K Desktop Environment (KDE)",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "dbus-next>=0.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
plasma-gnome-screenshot-bridge = "plasma_gnome_screenshot_bridge.bridge:main"

[project.urls]
Homepage = "https://github.com/numberyy/plasma-gnome-screenshot-bridge"
Repository = "https://github.com/numberyy/plasma-gnome-screenshot-bridge"
Issues = "https://github.com/numberyy/plasma-gnome-screenshot-bridge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
